# sigma-index

./: .gitattributes  .gitignore  2055_18052026_Tree.md  2303_18052026_Tree.md  2959_250526_sigma-index.md  3047_18052026_Tree.md  5534_210526_sigma-index.md  ADD_FEATURES.md  AGENTS.md  CHANGELOG.md  CHATGPT_CONVERSATION.md  CODE_OF_CONDUCT.md  COMPLETE_DELIVERY_SUITE_INDEX.md  COMPLETION_MASTER_PLAN.md  CONTRIBUTING.md  DOMAIN_EXPANSION_CHECKLIST.md  IMPLEMENTATION_REPORT.md  MVP_SIGMA-INDEX.md  MVP_SIGMA-INDEX_100%.md  Makefile  PHASE_SPECIFICATIONS.md  README.md  RESEARCH_PROJECT_PLAN_Global_Standards_Index.md  RESTRUCTURING_SUMMARY.md  SCHEMA.md  SIGMA_COMPLETE_DELIVERY_PLAN.md  docs_V1_2_0_PROGRESS_INDICATORS_Version1.md  generate_map.sh  generate_tree.sh  github_agentic_workflows_research.md  index.md  ollama.yaml  pyproject.toml  sigma_full_implementation.py  v1.0_RELEASE_ROADMAP.md
.devcontainer/: devcontainer-lock.json  devcontainer.json  post-create.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
docs/: AGENT_MEMORY_HANDOFF.md  AUTONOMOUS_GOVERNANCE.md  COMPLETE_REPOSITORY_ANALYSIS.md  GITHUB_AGENTIC_SETUP_GUIDE.md  GOOGLE_DRIVE_SYNC_MAP.md  HDX_PUBLICATION_CHECKLIST.md  OBSERVABILITY.md  OPERATOR_DASHBOARD.md  PASTED_RESOURCE_TRIAGE.md  PROFESSIONAL_CLEANUP_REPORT.md  PROJECT_KNOWLEDGE_GRAPH.md  PROJECT_PROGRESS.md  PROJECT_STATUS_REPORT_2026-05-02.md  PR_INSTRUCTIONS.md  QUALITY_GATE.md  RELATIONSHIP_QUALITY.md  RELEASE_GOVERNANCE.md  RESEARCH_TASKS.md  SECURITY_POLICY.md  SETUP_GUIDE.md  SIGMA_GAP_ANALYSIS_AND_ENHANCEMENT_PLAN.md  V1_2_0_PROGRESS_INDICATORS.md  ZENODO_ARCHIVAL_GUIDE.md  sigma-roadmap-100.html
public/: index.html  search-index.json  search.html
scripts/: __init__.py  bindingdb_lookup.py  build_domain_coverage.py  build_quality_gate.py  build_relationship_quality.py  build_release.py  build_research_task_report.py  build_static_site.py  check_duplicate_ids.py  check_urls.py  data_processing.py  extract_relationships.py  fetch_wikidata.py  gh_pr_flow.sh  harvest_gri_standards.py  harvest_itu_live.py  harvest_sasb_standards.py  harvest_un_treaties_live.py  harvest_w3c_live.py  harvest_who_iris.py  prepare_pr.sh  process_codex.py  process_culture_priority.py  process_etsi_priority.py  process_health_priority.py  process_humanitarian_priority.py  process_iaea_priority.py  process_iec_priority.py  process_ietf.py  process_ilo.py  process_iso.py  process_itu_priority.py  process_national_standards_bodies.py  process_nist_priority.py  process_open_ict_priority.py  process_space_priority.py  process_sports_priority.py  process_sustainability_reporting.py  process_w3c_priority.py  rest_request.py  (+6 more)
tests/: test_agent_cycle_workflow.py  test_agent_handoff_docs.py  test_bindingdb_lookup.py  test_build_quality_gate.py  test_build_relationship_quality.py  test_build_release.py  (+32 more)
(+527 files in other folders)
