[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sigma-index"
version = "0.9.0"
description = "SIGMA — Unified Global Standards Index: the world's first free, complete, machine-readable index of global standards"
readme = "README.md"
license = {text = "CC-BY-4.0"}
authors = [
    {name = "Mohammad Ariful Islam"},
]
keywords = ["standards", "global", "index", "humanitarian", "open-data", "treaties"]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28",
    "beautifulsoup4>=4.11",
    "SPARQLWrapper>=2.0",
    "pandas>=1.5",
    "openpyxl>=3.0",
    "pyarrow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://sigma-standards.github.io/sigma-index"
Repository = "https://github.com/sigma-standards/sigma-index"
Issues = "https://github.com/sigma-standards/sigma-index/issues"
Changelog = "https://github.com/sigma-standards/sigma-index/blob/main/CHANGELOG.md"

[project.scripts]
sigma-validate      = "sigma_index.validate_schema:main"
sigma-release       = "sigma_index.build_release:main"
sigma-coverage      = "sigma_index.build_domain_coverage:main"
sigma-relationships = "sigma_index.extract_relationships:main"
sigma-quality       = "sigma_index.build_quality_gate:main"
sigma-tasks         = "sigma_index.build_research_task_report:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]

[tool.setuptools.package-dir]
sigma_index = "scripts"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
